<resources>
    <string name="app_name">ytaStyle_app</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">user@correo.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_venta">Venta</string>
    <string name="menu_producto">Productos</string>
    <string name="menu_cliente">Clientes</string>
    <string name="vector_background">vector fondo</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="olvido">¿Olvido su contraseña?</string>
    <string name="registrate_con">O cree su cuenta con…</string>
    <string name="icono_de_google">Icono de Google para registrarse</string>
    <string name="imagen_logo_twiter">Imagen logo Twiter</string>
    <string name="ic_correo">Correo</string>
    <string name="registro">Crear Cuenta</string>
    <string name="info_register">Por favor ingrese sus datos</string>
    <string name="nombre_usuario">Nombre completo</string>
    <string name="email_usuario">Correo electronico</string>
    <string name="mensaje_registro">¿Tienes una cuenta ya creada?</string>
    <string name="usuario">Usuario</string>
    <string name="articulos">ARTICULOS</string>
    <string name="inventario">INVENTARIO</string>
    <string name="categorias">CATEGORIAS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrar_articulo">Registrar</string>
    <string name="inicia_sesion">Inicia sesion</string>
    <string name="olvido_su_contrase_a">Olvido su contraseña?</string>
    <string name="mensaje_recordar">Ingrese el correo electronico asociado a su cuenta de usuario. Le enviaremos un link al correo para que pueda restablecer la contraseña.</string>
</resources>