<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:contentDescription="@string/vector_background"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_login" />

        <View
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
    </LinearLayout>


    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="90dp"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="#fff"
            android:text="@string/bienvenido"
            android:fontFamily="@font/roboto_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_height="?actionBarSize"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#fff"
            android:fontFamily="@font/roboto_light"
            android:text="@string/inicia_sesion"
            android:layout_width="wrap_content"/>

        <EditText
            android:id="@+id/et_mail"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/correo"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColor="#fff"
            android:fontFamily="@font/roboto_regular"
            android:textColorHint="#eee"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:fontFamily="@font/roboto_regular"
            android:textSize="17sp" />

        <Button
            android:id="@+id/bt_iniciar"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:backgroundTint="#6C37B5"
            android:paddingLeft="40dp"
            android:fontFamily="@font/roboto_medium"
            android:paddingRight="40dp"
            android:layout_margin="10dp"
            android:text="@string/iniciar_sesion"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tv_olvido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/olvido"
            android:fontFamily="@font/roboto_regular"
            android:textSize="17sp"
            android:textColor="#fff" />
    </LinearLayout>


    <LinearLayout
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="10dp"
            android:text="@string/registrate_con"
            android:layout_width="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_marginEnd="15dp"
                android:background="@drawable/google"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/icono_de_google" />

            <ImageButton
                android:layout_marginEnd="15dp"
                android:background="@drawable/facebook_box"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <ImageButton
                android:layout_marginEnd="15dp"
                android:background="@drawable/twitter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/imagen_logo_twiter" />

            <ImageButton
                android:id="@+id/ibCorreoLogin"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_mail"
                android:contentDescription="@string/ic_correo" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>