<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_venta">

    <fragment
        android:id="@+id/nav_venta"
        android:name="com.kernelbyte.ytastyle_app.ui.venta.VentaFragment"
        android:label="@string/menu_venta"
        tools:layout="@layout/fragment_venta" />

    <fragment
        android:id="@+id/nav_producto"
        android:name="com.kernelbyte.ytastyle_app.ui.producto.ProductFragment"
        android:label="@string/menu_producto"
        tools:layout="@layout/fragment_productos" />

    <fragment
        android:id="@+id/nav_cliente"
        android:name="com.kernelbyte.ytastyle_app.ui.cliente.ClienteFragment"
        android:label="@string/menu_cliente"
        tools:layout="@layout/fragment_clientes" />
</navigation>