<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <ImageView
            android:layout_weight="9"
            android:src="@drawable/ic_login_register"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/vector_background" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_margin="?actionBarSize"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="#944CFA"
            android:text="@string/registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/info_register"
            android:textColor="#fff" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/nombre_usuario"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:textSize="17sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/email_usuario"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:textSize="17sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColor="#fff"
            android:textColorHint="#eee"
            android:textSize="17sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_corner_buttom"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/registro"
            android:textColor="#FEFEFE"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mensaje_registro"
                android:textColor="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingStart="10dp"
                android:text="@string/iniciar_sesion2"
                android:textColor="#fff"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>